--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,11 +1,14 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Welcome to The Movie Database (TMDb) API - Version 3"
 ---
+
+This is a recreation of the official documentation for the TMDb API (version 3). Here, you'll find a comprehensive list of all available endpoints for accessing movie, TV, actor, and image data. The API provides the resources you need to seamlessly integrate movie and TV-related information into your applications.
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/tmdb image.jpeg"
+  width="90%"
   alt="Hero Light"
 />
 <img
@@ -14,58 +17,14 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## Authorization
 
-The first step to world-class documentation is setting up your editing environments.
+To begin using the TMDb API, you must first sign up for an account. If you do not have an account, registering for an account is free and simple. Click [here](https://www.themoviedb.org/signup) to get started.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+Once you've registered, follow these steps to obtain your API key:
 
-## Make it yours
+- Log in to your TMDb account.
+- Visit your [Account Settings page](https://www.themoviedb.org/settings/api).
+- Click on the API link to register for an API key.
 
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+_Please note that the API registration process is optimized for desktop devices. For the best experience, we recommend completing the registration on a desktop computer using a browser._
