--- a/User.mdx
+++ b/User.mdx
@@ -3,7 +3,9 @@ title: "User Authentication"
 description: "User Authentication (For Actions Requiring a Session)"
 ---
 
-To perform actions like rating a movie, adding to a watchlist, or creating a favorite list, you need a session ID.
+You can authenticate TMDB users within your application to extend the TMDB experience within your application. This will let your users (nay—our users) do things like rate movies, maintain their favourite and watch lists as well as do things like create and edit custom lists—all while staying in sync with their account on TMDB.
+
+User authentication is controlled with a session_id query parameter. You can generate a session_id by following the steps outlined below:
 
 ## Step 1: Create a Request Token
 
