--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,12 +7,8 @@ This is a recreation of the official documentation for the TMDb API (version 3).
 
 <img
   className="block dark:hidden"
-  src="/images/tmdb image.jpeg"
+  src="/images/image.png"
   width="70%"
   alt="Hero Light"
 />
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<img className="hidden dark:block" src="/images/image.png" alt="Hero Dark" />
