add simple icons

--- a/Guest.mdx
+++ b/Guest.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Guest Authentication"
+icon: "lock"
 description: "Use this session_id for actions requiring a Guest Session-authenticated API action."
 ---
 
