--- a/auth.mdx
+++ b/auth.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Authentication"
+icon: "lock"
+iconType: "solid"
 description: "Learn how to authenticate requests using API keys and session-based authentication in the TMDB API."
 ---
 
